--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,11 +35,19 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   pin_input_text_field: ^4.5.1
-
+  geolocator: ^10.1.0
+  geocoding: ^2.1.0
+  google_maps_flutter: ^2.5.0
   loading_indicator: ^3.1.1
   local_auth: ^2.1.7
   shared_preferences: ^2.2.2
   animated_icon_button: ^1.0.2
+  floating_bottom_navigation_bar: ^1.5.2
+  font_awesome_flutter: ^10.6.0
+  flutter_profile_picture: ^2.0.0
+  url_launcher: ^6.1.14
+  flutter_polyline_points: ^2.0.0
+  google_maps: ^6.3.0
 
 dev_dependencies:
   flutter_test:
