--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -27,10 +27,12 @@
         <!-- Don't delete the meta-data below.
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
         <meta-data android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyASO5mgA_JBDA-MtJMg50m_bVjZy2f32jk" />
+            android:value="AIzaSyCU0tk4IKjnadlWWgBGYp95nQsLe1-dedU" />
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+        <receiver android:exported="false"
+            android:name="com.dexterous.flutterlocalnotifications.ActionBroadcastReceiver" />
     </application>
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
