--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   google_maps: ^6.3.0
   http: ^1.1.0
   socket_io_client: ^2.0.3+1
+  flutter_local_notifications: ^16.3.0
 
 dev_dependencies:
   flutter_test:
