--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -25,7 +25,7 @@ if (flutterVersionName == null) {
 }
 
 android {
-    namespace "com.example.wasla_driver"
+    namespace "com.wasla.wasla_driver"
     compileSdkVersion 33
     ndkVersion flutter.ndkVersion
 
