--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.wasla.wasla_driver">
     <application
-        android:label="wasla_driver"
+        android:label="Wasla 3andek Driver"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
